Fix line spacing for Mercer

--- a/src/assets/custom/css/_sass/_typography.scss
+++ b/src/assets/custom/css/_sass/_typography.scss
@@ -43,7 +43,7 @@
 
 @mixin mercer {
   font-size: 21px;
-  line-height: 1.313;
+  line-height: 33px;
 }
 
 @mixin mercer-responsive {
